# fizz-buzz

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests-and-linter-check.yml
fizz_buzz/: fizz_buzz.py
fizz_buzz/scripts/: fizz_buzz.py
tests/: test_fizz_buzz.py
