[tool.poetry]
name = "fizz-buzz"
version = "0.1.0"
description = "FizzBuzz CLI utility"
authors = ["Sergey Martynov <acemore@mail.ru>"]
repository = "https://github.com/Acemore/fizz-buzz"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux"
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
argparse = "^1.4.0"

[tool.poetry.scripts]
fizz-buzz = "fizz_buzz.scripts.fizz_buzz:main"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
